# FaDedup

./: CMakeLists.txt  README.md  count.sh
ceph/: install.sh
conf/: sys.conf
script/: batch.sh  compile.sh  init.sh  remove_pool.sh  run.sh  (+3 more)
src/: CMakeLists.txt  DPAgent.cc  DPClient.cc
src/common/: BlockingQueue.hh  CMakeLists.txt  ChunkInfo.hh  Config.cc  Config.hh  Container.cc  Container.hh  DPDataChunk.cc  DPDataChunk.hh  DPDataPacket.cc  DPDataPacket.hh  DPDeleteStream.cc  DPDeleteStream.hh  DPInputStream.cc  DPInputStream.hh  DPOutputStream.cc  DPOutputStream.hh  DPReorderStream.cc  DPReorderStream.hh  FileRecipe.hh  LocalRecognition.cc  LocalRecognition.hh  PacketRecipe.hh  PacketRecipeSerializer.cc  PacketRecipeSerializer.hh  ReadBuf.cc  ReadBuf.hh  Router.hh  StoreInputStream.cc  StoreInputStream.hh  StoreLayer.cc  StoreLayer.hh  StoreLayerWorker.cc  StoreLayerWorker.hh  StoreOutputStream.cc  StoreOutputStream.hh  ThreadPool.cc  ThreadPool.hh  UpdateStream.cc  UpdateStream.hh  (+5 more)
src/dedup/: CMakeLists.txt  DedupHandler.cc  DedupHandler.hh
src/dedup/chunking/: CMakeLists.txt  ChunkingHandler.cc  ChunkingHandler.hh  chunking.hh  fastcdc.cc  fixed_size_chunking.cc  rabin_chunking.cc
src/dedup/hashing/: CMakeLists.txt  HashingHandler.cc  HashingHandler.hh  hashing.hh  sha1_hashing.cc
src/inc/: include.hh
src/protocol/: AgCommand.cc  AgCommand.hh  CMakeLists.txt
src/storage/: BaseFS.hh  BaseFile.hh  CMakeLists.txt  CephFS.cc  CephFS.hh  CephFile.hh  CephRBDFS.cc  CephRBDFS.hh  FSUtil.cc  FSUtil.hh
src/util/: CMakeLists.txt  RedisUtil.cc  RedisUtil.hh
(+4 files in other folders)
